feat(Comment): Added Get one, Post
