# src/tickets/comments/dto/newComment.dto.ts
@@ -1,0 +1,6 @@
+import { Ticket } from "src/tickets/dto/ticket.entity";
+
+export class NewCommentDto{
+  comment: string;
+  ticket: Ticket;
+}
